# kurs4_5_skypro

./: README.md  database.ini.example  main.py  pyproject.toml
src/: config.py  constants.py  dbmanager.py  flow.py  hhparser.py  schemas.py
